--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#hero"><img src="/assets/img/logo.png"></a>
+      <a class="navbar-brand" href="#hero"><img src="assets/img/logo.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
