--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
               <p class="card-text">
                 Ofrecemos servicios de transporte especializado para garantizar que tus alimentos lleguen frescos y en óptimas condiciones.
               </p>
+              <div class="ver-mas">
+                <span>Ver más</span> <i class="fas fa-arrow-right"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -125,6 +128,9 @@
               <p class="card-text">
                 Contamos con instalaciones de cámaras de frío para almacenar productos perecederos de forma segura y eficiente.
               </p>
+              <div class="ver-mas">
+                <span>Ver más</span> <i class="fas fa-arrow-right"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -269,9 +275,6 @@
   </div>
   </div>
   
-
-
-
   <!-- Footer / Redes Sociales -->
   <footer class="py-4 bg-dark text-white">
     <div class="container text-center">
