--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="hero" class="hero-section">
     <div class="hero-overlay"></div>
     <div class="hero-content container text-center">
-      <h1 class="display-4">Bienvenido a Logistic & Warehouse (L&W)</h1>
+      <h1 class="display-4">Bienvenido a Frío Urbano</h1>
       <p class="lead">Soluciones logísticas en transporte de alimentos y cámaras de frío.</p>
       <a href="#contacto" class="btn btn-lg btn-custom mt-3">Contáctanos</a>
     </div>
