--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <section id="hero" class="hero-section">
     <div class="hero-overlay"></div>
     <div class="hero-content container text-center">
-      <h1 class="display-4">Bienvenido a Frío Urbano</h1>
-      <p class="lead">Soluciones logísticas en transporte de alimentos y cámaras de frío.</p>
+      <h1 class="display-4">Bienvenidos a Frío Urbano</h1>
+      <p class="lead">Soluciones logísticas integrales en transporte de alimentos y alquiler de espacios de frío.</p>
       <a href="#contacto" class="btn btn-lg btn-custom mt-3">Contáctanos</a>
     </div>
   </section>
@@ -50,7 +50,7 @@
         <!-- Texto descriptivo -->
         <div class="col-md-6 mb-4">
           <p>
-            En L&W, nos especializamos en ofrecer soluciones logísticas integrales para el transporte y almacenamiento de alimentos. 
+            En Frío Urbano, nos especializamos en ofrecer soluciones logísticas integrales para el transporte y almacenamiento de alimentos. 
             Con tecnología de punta y un equipo altamente capacitado, garantizamos que cada producto llegue a su destino con la máxima calidad y seguridad.
             Nuestro compromiso es brindar un servicio eficiente y confiable, adaptándonos a las necesidades de nuestros clientes en cada etapa del proceso.
           </p>
@@ -71,48 +71,114 @@
   <!-- Sección Clientes -->
   <section id="clientes" class="py-5">
     <div class="container">
-      <h2 class="mb-4 text-center">Clientes y Socios</h2>
-      <div class="row justify-content-center">
-        <!-- Clientes -->
-        <div class="col-6 col-md-3 mb-4 text-center">
-          <img src="assets/img/company_logos/bonafide.png" alt="Bonafide" class="img-fluid">
-        </div>
-        <!-- Clientes -->
-        <div class="col-6 col-md-3 mb-4 text-center">
-          <img src="assets/img/company_logos/citric.png" alt="Citric" class="img-fluid">
-        </div>
-        <!-- Clientes -->
-        <div class="col-6 col-md-3 mb-4 text-center">
+      <h2 class="mb-4 text-center">Clientes que confían en nosotros</h2>
+      <div class="client-slider">
+        <div class="client-slider-track">
+          <!-- Primera tanda de logos -->
+          <div class="client-slide">
+            <img src="assets/img/company_logos/bonafide.png" alt="Bonafide" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/citric.png" alt="Citric" class="img-fluid">
+          </div>
+          <div class="client-slide">
             <img src="assets/img/company_logos/dorada.png" alt="Dorada" class="img-fluid">
-        </div>
-        <!-- Clientes -->
-        <div class="col-6 col-md-3 mb-4 text-center">
-            <img src="assets/img/company_logos/franui.png" alt="Franui" class="img-fluid">
-        </div>
-        <!-- Clientes -->
-        <div class="col-6 col-md-3 mb-4 text-center">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/dv_dist.png" alt="DV Distribuciones" class="img-fluid">
+          </div>
+          <div class="client-slide">
             <img src="assets/img/company_logos/elcor.png" alt="Elcor" class="img-fluid">
-        </div>
-        <!-- Clientes -->
-        <div class="col-6 col-md-3 mb-4 text-center">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/ezemay.png" alt="Ezemay" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/franui.png" alt="Franui" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/la_felisa.png" alt="La Felisa" class="img-fluid">
+          </div>
+          <div class="client-slide">
             <img src="assets/img/company_logos/lario.png" alt="Lario" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/leig_lac.png" alt="Leig-Lac" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/marfrig.png" alt="Marfrig" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/metro.png" alt="Distribuidora Metropolitana" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/santa_maria.png" alt="Santa María" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/tremblay.png" alt="Tremblay" class="img-fluid">
+          </div>
+
+          <!-- Duplicamos la lista para crear un bucle continuo -->
+          <div class="client-slide">
+            <img src="assets/img/company_logos/bonafide.png" alt="Bonafide" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/citric.png" alt="Citric" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/dorada.png" alt="Dorada" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/dv_dist.png" alt="DV Distribuciones" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/elcor.png" alt="Elcor" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/ezemay.png" alt="Ezemay" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/franui.png" alt="Franui" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/la_felisa.png" alt="La Felisa" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/lario.png" alt="Lario" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/leig_lac.png" alt="Leig-Lac" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/marfrig.png" alt="Marfrig" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/metro.png" alt="Distribuidora Metropolitana" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/santa_maria.png" alt="Santa María" class="img-fluid">
+          </div>
+          <div class="client-slide">
+            <img src="assets/img/company_logos/tremblay.png" alt="Tremblay" class="img-fluid">
+          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Sección Servicios -->
   <section id="servicios" class="py-5">
     <div class="container">
       <h2 class="mb-4 text-center">Nuestros Servicios</h2>
       <div class="row">
-        <!-- Servicio 1: Transporte de Alimentos -->
+        <!-- Servicio 1: Punta a Punta -->
         <div class="col-md-6 mb-4">
-          <div class="card h-100 service-card" data-toggle="modal" data-target="#transporteModal">
+          <div class="card h-100 service-card" data-toggle="modal" data-target="#puntaModal">
             <div class="card-body">
-              <h4 class="card-title">Transporte de Alimentos</h4>
+              <h4 class="card-title">Punta a Punta</h4>
               <p class="card-text">
-                Ofrecemos servicios de transporte especializado para garantizar que tus alimentos lleguen frescos y en óptimas condiciones.
+                Retiramos la mercadería directamente de la fábrica o planta productora y la entregamos al cliente final, encargándonos de todo el proceso logístico, transporte y almacenamiento.
               </p>
               <div class="ver-mas">
                 <span>Ver más</span> <i class="fas fa-arrow-right"></i>
@@ -120,13 +186,27 @@
             </div>
           </div>
         </div>
-        <!-- Servicio 2: Alquiler de Cámaras de Frío (Guarda) -->
+        <!-- Servicio 2: Alquiler de Cámaras de Frío -->
         <div class="col-md-6 mb-4">
           <div class="card h-100 service-card" data-toggle="modal" data-target="#guardaModal">
             <div class="card-body">
               <h4 class="card-title">Alquiler de Cámaras de Frío</h4>
               <p class="card-text">
                 Contamos con instalaciones de cámaras de frío para almacenar productos perecederos de forma segura y eficiente.
+              </p>
+              <div class="ver-mas">
+                <span>Ver más</span> <i class="fas fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Servicio 3: Transporte de Alimentos -->
+        <div class="col-md-6 mb-4">
+          <div class="card h-100 service-card" data-toggle="modal" data-target="#transporteModal">
+            <div class="card-body">
+              <h4 class="card-title">Transporte de Alimentos</h4>
+              <p class="card-text">
+                Ofrecemos servicios de transporte especializado para garantizar que tus alimentos lleguen frescos y en óptimas condiciones.
               </p>
               <div class="ver-mas">
                 <span>Ver más</span> <i class="fas fa-arrow-right"></i>
@@ -169,13 +249,13 @@
     </div>
   </section>
 
-<!-- Modal para Detalle del Servicio: Transporte de Alimentos -->
-<div class="modal fade" id="transporteModal" tabindex="-1" role="dialog" aria-labelledby="transporteModalLabel" aria-hidden="true">
+  <!-- Modal para Detalle del Servicio: Punta a Punta -->
+  <div class="modal fade" id="puntaModal" tabindex="-1" role="dialog" aria-labelledby="puntaModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <!-- Encabezado del Modal -->
         <div class="modal-header">
-          <h5 class="modal-title" id="transporteModalLabel">Transporte de Alimentos</h5>
+          <h5 class="modal-title" id="puntaModalLabel">Punta a Punta</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -183,33 +263,30 @@
         <!-- Cuerpo del Modal -->
         <div class="modal-body">
           <p>
-            Detalle del servicio de transporte de alimentos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet facilisis urna. Praesent facilisis, justo ac congue finibus, nisi erat iaculis nisi, et tincidunt felis urna in dolor.
+            Nuestro servicio "Punta a Punta" se encarga de retirar la mercadería directamente de la fábrica o planta productora y entregarla al cliente final. Nos ocupamos de todo el proceso logístico, desde el transporte hasta el almacenamiento, garantizando una cadena de suministro sin interrupciones y con la máxima eficiencia.
           </p>
-          <!-- Carrusel de Imágenes para Transporte -->
-          <div id="transporteCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Carrusel de Imágenes para Punta a Punta -->
+          <div id="puntaCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicadores del Carrusel -->
             <ol class="carousel-indicators">
-              <li data-target="#transporteCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#transporteCarousel" data-slide-to="1"></li>
+              <li data-target="#puntaCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#puntaCarousel" data-slide-to="1"></li>
             </ol>
             <!-- Contenedor de Imágenes -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/img/units/camion01.jpg" class="d-block w-100" alt="Transporte de Alimentos 1">
+                <img src="assets/img/full-service/punta01.webp" class="d-block w-100" alt="Punta a Punta 1">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/units/camion02.jpg" class="d-block w-100" alt="Transporte de Alimentos 2">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/units/camion03.jpg" class="d-block w-100" alt="Transporte de Alimentos 3">
+                <img src="assets/img/full-service/punta02.webp" class="d-block w-100" alt="Punta a Punta 2">
               </div>
             </div>
             <!-- Controles del Carrusel -->
-            <a class="carousel-control-prev" href="#transporteCarousel" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#puntaCarousel" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Anterior</span>
             </a>
-            <a class="carousel-control-next" href="#transporteCarousel" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#puntaCarousel" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Siguiente</span>
             </a>
@@ -273,8 +350,62 @@
       </div>
     </div>
   </div>
+
+
+  <!-- Modal para Detalle del Servicio: Transporte de Alimentos -->
+  <div class="modal fade" id="transporteModal" tabindex="-1" role="dialog" aria-labelledby="transporteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <!-- Encabezado del Modal -->
+        <div class="modal-header">
+          <h5 class="modal-title" id="transporteModalLabel">Transporte de Alimentos</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <!-- Cuerpo del Modal -->
+        <div class="modal-body">
+          <p>
+            Detalle del servicio de transporte de alimentos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet facilisis urna. Praesent facilisis, justo ac congue finibus, nisi erat iaculis nisi, et tincidunt felis urna in dolor.
+          </p>
+          <!-- Carrusel de Imágenes para Transporte -->
+          <div id="transporteCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicadores del Carrusel -->
+            <ol class="carousel-indicators">
+              <li data-target="#transporteCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#transporteCarousel" data-slide-to="1"></li>
+            </ol>
+            <!-- Contenedor de Imágenes -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/units/camion01.jpg" class="d-block w-100" alt="Transporte de Alimentos 1">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/units/camion02.jpg" class="d-block w-100" alt="Transporte de Alimentos 2">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/units/camion03.jpg" class="d-block w-100" alt="Transporte de Alimentos 3">
+              </div>
+            </div>
+            <!-- Controles del Carrusel -->
+            <a class="carousel-control-prev" href="#transporteCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#transporteCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Siguiente</span>
+            </a>
+          </div>
+        </div>
+        <!-- Pie del Modal -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-custom" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
   </div>
-  
+
   <!-- Footer / Redes Sociales -->
   <footer class="py-4 bg-dark text-white">
     <div class="container text-center">
