--- a/index.html
+++ b/index.html
@@ -68,103 +68,66 @@
   </section>
 
 
-  <!-- Sección Clientes -->
-  <section id="clientes" class="py-5">
-    <div class="container">
-      <h2 class="mb-4 text-center">Clientes que confían en nosotros</h2>
-      <div class="client-slider">
-        <div class="client-slider-track">
-          <!-- Primera tanda de logos -->
-          <div class="client-slide">
-            <img src="assets/img/company_logos/bonafide.png" alt="Bonafide" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/citric.png" alt="Citric" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/dorada.png" alt="Dorada" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/dv_dist.png" alt="DV Distribuciones" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/elcor.png" alt="Elcor" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/ezemay.png" alt="Ezemay" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/franui.png" alt="Franui" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/la_felisa.png" alt="La Felisa" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/lario.png" alt="Lario" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/leig_lac.png" alt="Leig-Lac" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/marfrig.png" alt="Marfrig" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/metro.png" alt="Distribuidora Metropolitana" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/santa_maria.png" alt="Santa María" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/tremblay.png" alt="Tremblay" class="img-fluid">
-          </div>
-
-          <!-- Duplicamos la lista para crear un bucle continuo -->
-          <div class="client-slide">
-            <img src="assets/img/company_logos/bonafide.png" alt="Bonafide" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/citric.png" alt="Citric" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/dorada.png" alt="Dorada" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/dv_dist.png" alt="DV Distribuciones" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/elcor.png" alt="Elcor" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/ezemay.png" alt="Ezemay" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/franui.png" alt="Franui" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/la_felisa.png" alt="La Felisa" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/lario.png" alt="Lario" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/leig_lac.png" alt="Leig-Lac" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/marfrig.png" alt="Marfrig" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/metro.png" alt="Distribuidora Metropolitana" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/santa_maria.png" alt="Santa María" class="img-fluid">
-          </div>
-          <div class="client-slide">
-            <img src="assets/img/company_logos/tremblay.png" alt="Tremblay" class="img-fluid">
-          </div>
-        </div>
+<!-- Sección Clientes -->
+<section id="clientes" class="py-5">
+  <div class="container">
+    <h2 class="mb-4 text-center">Clientes que confían en nosotros</h2>
+    <div class="row">
+      <!-- Cada logo se coloca en una columna responsive -->
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/alloa.png" alt="Alloa" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/bonafide.png" alt="Bonafide" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/citric.png" alt="Citric" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/dorada.png" alt="Dorada" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/dv_dist.png" alt="DV Distribuciones" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/elcor.png" alt="Elcor" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/ezemay.png" alt="Ezemay" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/franui.png" alt="Franui" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/la_felisa.png" alt="La Felisa" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/lactear.png" alt="Lactear" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/lario.png" alt="Lario" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/lheritier.png" alt="Lheritier" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/leig_lac.png" alt="Leig-Lac" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/marfrig.png" alt="Marfrig" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/metro.png" alt="Distribuidora Metropolitana" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/santa_maria.png" alt="Santa María" class="img-fluid">
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <img src="assets/img/company_logos/tremblay.png" alt="Tremblay" class="img-fluid">
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 
   <!-- Sección Servicios -->
